--- a/slides/index.html
+++ b/slides/index.html
@@ -12,9 +12,9 @@
 
 class: front-page
 
-# title
+# Azure Resource Manager workshop
 
-## .NET-faggruppen
+## For .NET-faggruppen i BEKK
 
 Henrik Walker Moe
 
@@ -22,9 +22,24 @@ Henrik Walker Moe
 
 ---
 
-class: center middle
+class: agenda
 
-Blabla
+# Agenda
+
+* Konsept
+* Template format
+* Verktøy
+* Ressurser
+* Start på oppgavene
+
+---
+
+class: split
+
+# Konsept
+
+## Azure Resource Manager
+- A manager of resources in Azure (duh!)
 
 ???
 comment
