Added diagram slide

--- a/slides/index.html
+++ b/slides/index.html
@@ -30,7 +30,6 @@ class: agenda
 * Template format
 * Verktøy
 * Ressurser
-* Start på oppgavene
 
 ---
 
@@ -43,6 +42,11 @@ class: split
 
 ???
 comment
+
+---
+
+class: middle center
+background-image: url(images/arm-arkitektur.png)
 
 ---
 
