Updated slides, texts

--- a/slides/index.html
+++ b/slides/index.html
@@ -33,7 +33,7 @@ class: agenda
 
 ---
 
-class: split
+class: left
 
 # Konsept
 
@@ -50,11 +50,25 @@ background-image: url(images/arm-arkitektur.png)
 
 ---
 
+class: left 
+
+# Dagens mål
+
+* Bli kjent med json-strukturen og konseptet
+* Ha publisert et template via Azure CLI / Powershell / VS
+* Innsikt i hvordan ARM-templates kan hjelpe deg
+
+---
+
 class: center middle bekk-top
 
-# Cheat sheet
+# Start her
 
 [https://github.com/henrikwm/arm-workshop](https://github.com/henrikwm/arm-workshop)
+
+## Hjelp
+
+`#arm-workshop`
 
     </textarea>
     <script src="node_modules/remark-bekk/vendor/remark.min.js" type="text/javascript"></script>
