--- a/slides/index.html
+++ b/slides/index.html
@@ -64,11 +64,11 @@ class: center middle bekk-top
 
 # Start her
 
-[https://github.com/henrikwm/arm-workshop](https://github.com/henrikwm/arm-workshop)
+http://bit.ly/arm-workshop
 
 ## Hjelp
 
-`#arm-workshop`
+BEKK Slack: `#arm-workshop`
 
     </textarea>
     <script src="node_modules/remark-bekk/vendor/remark.min.js" type="text/javascript"></script>
