--- a/slides/index.html
+++ b/slides/index.html
@@ -37,11 +37,13 @@ class: left
 
 # Konsept
 
-## Azure Resource Manager
-- A manager of resources in Azure (duh!)
+* Azure Resource Manager templates == Infrastructure as Code i Azure
+* Utvikler->beskriver infrastruktur->ARM->spinner opp tjenester i Azure
+* DevOps - automatic deploys, immutable deploys etc.
+* Muliggjør sikrere håndtering av secrets via Azure KeyVault.
 
 ???
-comment
+Muliggjør også andre verktøy som kan skripte infrastructure i Azure: TerraForm og etc.
 
 ---
 
