--- a/slides/index.html
+++ b/slides/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
+  <head>
+      <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+      <title>ARM Workshop</title>
+      <link rel="stylesheet" href="node_modules/remark-bekk/dist/bekk.css">
+      <link rel="stylesheet" href="styles.css">
+  </head>
 
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>ARM Workshop</title>
-    <link rel="stylesheet" href="node_modules/remark-bekk/dist/bekk.css">
-</head>
-
-<body class="bekk-black">
-    <textarea id="source">
+  <body class="bekk-black">
+      <textarea id="source">
 
 class: front-page
 
 # Azure Resource Manager workshop
-
-## For .NET-faggruppen i BEKK
+## .NET-faggruppen
 
 Henrik Walker Moe
 
@@ -29,18 +28,16 @@ class: agenda
 * Konsept
 * Template format
 * Verktøy
-* Ressurser
+* Oppgaver
 
 ---
 
-class: left
-
 # Konsept
 
-* Azure Resource Manager templates == Infrastructure as Code i Azure
-* Utvikler->beskriver infrastruktur->ARM->spinner opp tjenester i Azure
-* DevOps - automatic deploys, immutable deploys etc.
-* Muliggjør sikrere håndtering av secrets via Azure KeyVault.
+* Azure Resource Manager (ARM) templates == Infrastructure as Code i Azure
+* Utvikler > beskriver infrastruktur > ARM > provisjonerer tjenester i Azure
+* DevOps - automatic deploys, immutable deploys
+* Secrets fra Azure KeyVault
 
 ???
 Muliggjør også andre verktøy som kan skripte infrastructure i Azure: TerraForm og etc.
@@ -50,81 +47,123 @@ Muliggjør også andre verktøy som kan skripte infrastructure i Azure: TerraFor
 class: middle center
 background-image: url(images/arm-arkitektur.png)
 
+.source[http://www.slideshare.net/marcmercuri/architecting-world-class-azure-resource-manager-templates]
+
 ---
 
-class: left 
+#azuredeploy.json
+
+```js
+{
+  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
+  "contentVersion": "1.0.0.0",
+  "parameters": {  },
+  "variables": {  },
+  "resources": [  ],
+  "outputs": {  }
+}
+```
+
+.source[https://azure.microsoft.com/en-us/documentation/articles/resource-group-authoring-templates/]
+
+---
+
+#azuredeploy.json: parameters
+
+````js
+"parameters": {
+  "siteName": {
+    "type": "string",
+    "defaultValue": "[concat('site', uniqueString(resourceGroup().id))]"
+  },
+  "hostingPlanName": {
+    "type": "string",
+    "defaultValue": "[concat(parameters('siteName'),'-plan')]"
+  }
+}
+```
+
+.source[https://azure.microsoft.com/en-us/documentation/articles/resource-group-authoring-templates/]
+
+???
+Legg merke til Template Function "concat", "uniqueString"
+Inline functions = blæh!
+
+---
+
+#azuredeploy.json: resources
+
+```js
+"resources": [
+  {
+    "apiVersion": "2015-08-01",
+    "type": "Microsoft.Web/sites",
+    "name": "[parameters('siteName')]",
+    "location": "[resourceGroup().location]",
+    "tags": {
+      "environment": "dev",
+      "team": "MS"
+    },
+    "dependsOn": [
+      "[concat('Microsoft.Web/serverFarms/', parameters('hostingPlanName'))]"
+    ],
+    "properties": {
+      "name": "[parameters('siteName')]",
+      "serverFarmId": "[resourceId('Microsoft.Web/serverfarms', parameters('hostingPlanName'))]"
+    }
+  }
+]
+```
+
+.source[https://azure.microsoft.com/en-us/documentation/articles/resource-group-authoring-templates/]
+
+???
+App Service Plan koblet til web app
+
+---
+
+#Konvensjoner
+
+* 3 filer: `azuredeploy.json`, `azuredeploy.parameters.json` og `metadata.json`
+* `apiVersion` som variabler i `azuredeploy.json`
+* Avansert: linke mellom templates
+
+???
+Fortell om ryddig oppdeling av ARM-templatene
+Bruk variabler i azuredeploy.json for navn, resourceId og apiversion
+---
 
 # Dagens mål
 
-* Bli kjent med json-strukturen og konseptet
-* Ha publisert et template via Azure CLI / Powershell / VS
-* Innsikt i hvordan ARM-templates kan hjelpe deg
+* Bli kjent med strukturen og konseptet
+* Bli kjent med verktøyene: Azure CLI / Powershell / VS
+* Publisert et ARM-template
+* Innsikt i fordeler/ulemper med ARM-templates
 
 ---
 
-class: center middle bekk-top
-
+class: center middle
 # Start her
 
 http://bit.ly/arm-workshop
 
-## Hjelp
+##@henrikwm84
 
-BEKK Slack: `#arm-workshop`
-
-    </textarea>
-    <script src="node_modules/remark-bekk/vendor/remark.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-    var slideshow = remark.create({
-        ratio: '16:9',
-        highlightLanguage: 'javascript',
-        highlightStyle: 'monokai_sublime'
-    });
-
-    var dateStr = new Date().toLocaleString('nb-NO', {
-        year: 'numeric',
-        month: 'long',
-        day: 'numeric'
-    });
-
-    Array.prototype.slice.call(document.querySelectorAll(".today-date")).forEach(function(el) {
-        el.textContent = dateStr;
-    });
-    </script>
-    <style type="text/css">
-      .remark-notes {
-        font-size: 1.5em;
-      }
-
-      .split {
-        padding-right: 45%;
-      }
-      .split img,
-      .split iframe {
-        position: absolute;
-        top: 0;
-        right: 0;
-        height: 100%;
-        max-height: none !important;
-        border: 0;
-      }
-
-      .rotate {
-        animation:spin 4s linear infinite;
-      }
-
-      @keyframes spin {
-        100% {
-          transform:rotate(360deg);
+      </textarea>
+      <script src="node_modules/remark-bekk/vendor/remark.min.js" type="text/javascript"></script>
+      <script type="text/javascript">
+      var slideshow = remark.create({
+          ratio: '16:9',
+          highlightLanguage: 'javascript',
+          highlightStyle: 'monokai_sublime',
+          navigation: {
+          scroll: false
         }
-      }
+      });
 
-      [id^=twitter-widget-] {
-        display: inline-block !important;
-        transform: scale(2);
-      }
-    </style>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-</body>
+      var dateStr = new Date().toLocaleString('nb-NO', { year: 'numeric', month: 'long', day: 'numeric' });
 
+      document.querySelector('.today-date').textContent = dateStr;
+      </script>
+  </body>
 </html>
